# sampler-bench

./: .gitignore  =1.0.0  CLAUDE.md  HYPERPARAMETER_SEARCH.md  JUDGE_SETUP.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  ROBUST_BENCHMARK_SETUP.md  creative_writing_results.json  discovered_optimal_samplers.yaml  env.example  environment.example  judge_existing_results.py  pyproject.toml  requirements.txt  start_backend.py  test.py  test_creative_writing.py
archive/: creative_writing_rigorous_results_20250629_140903.json  llama_3_1_8b_test_results.json
backend/: fastapi_server.py  model_runner.py
frontend/: DEPLOYMENT.md  README.md  next.config.js  package.json  postcss.config.js  tsconfig.json  vercel.json
results/: gemma312bit_benchmark_20250705-112050.json  gemma312bit_judged_20250705-112209.json  gemma312bit_judged_20250719-100344.json  gpt45_benchmark_manual.json  gpt45_judged_20250705-114033.json  hyper_search_bayesian_20250702_141215.json  llama318binstruct_benchmark_20250702-121400.json  llama318binstruct_benchmark_20250704-131336.json  llama318binstruct_judged_20250702-121535.json  llama318binstruct_judged_20250702-122132.json  llama318binstruct_judged_20250702-122346.json  llama318binstruct_judged_20250704-131619.json  llama318binstruct_judged_20250719-102805.json  ministral8binstruct_benchmark_20250704-114023.json  ministral8binstruct_judged_20250704-114146.json  ministral8binstruct_judged_20250719-102153.json  mistralnemo12b_benchmark_20250705-104741.json  mistralnemo12b_judged_20250705-104853.json  mistralnemo12b_judged_20250719-101639.json  mistralsmall24b_benchmark_20250703-092718.json  mistralsmall24b_benchmark_20250703-095647.json  mistralsmall24b_benchmark_20250703-102056.json  mistralsmall24b_benchmark_20250703-105914.json  mistralsmall24b_benchmark_20250703-111453.json  mistralsmall24b_benchmark_20250704-123038.json  qwen38b_judged_20250705-100040.json  (+9 more)
(+109 files in other folders)
