[tool.poetry]
name = "sampler-bench"
version = "0.1.0"
description = "Research-grade benchmarking and visualization suite for LLM sampling strategies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"
transformers = "^4.36.0"
datasets = "^2.14.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
polars = "^0.19.0"
llama-cpp-python = "^0.2.0"
vllm = "^0.2.0"
accelerate = "^0.24.0"
bitsandbytes = "^0.41.0"
openai = "^1.3.0"
evaluate = "^0.4.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
sacrebleu = "^2.3.1"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
pyyaml = "^6.0"
jsonlines = "^4.0.0"
tqdm = "^4.66.0"
rich = "^13.6.0"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
requests = "^2.31.0"
httpx = "^0.25.0"
asyncio = "^3.4.3"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[tool.poetry.group.monitoring.dependencies]
wandb = "^0.16.0"
tensorboard = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 